[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "reconmap-cli"
version = "0.1.0"
description = "A safe, lightweight attack surface mapping CLI for security analysts"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "T4riiiiq"}]
keywords = ["security", "reconnaissance", "attack-surface", "dns", "tls"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Topic :: Security",
]
dependencies = ["dnspython>=2.6,<3", "publicsuffix2>=2.20191221"]

[project.scripts]
reconmap = "reconmap.cli:main"

[tool.setuptools.packages.find]
include = ["reconmap*"]
